<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dream_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_dream" />
    <TextView
        android:id="@+id/no_dream_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_dreams"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/no_dream_add_button"
        android:text="@string/new_dream"
        app:icon="@drawable/ic_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>
