<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dream Title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/list_item_reflection_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reflections: 0"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="Dream status"
        android:scaleType="centerCrop"
        android:layout_gravity="center_vertical" />
</LinearLayout>
